Fix horizontal alignment for modal activate button

--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -22,3 +22,8 @@ label{
 	margin-bottom: 0;
 	font-family: $sans_serif_font_family;
 }
+
+#activate_form{
+	position: relative;
+	top: -2.48em;
+}
